--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="sketch-pad"></div>
     <div id="settings">
-        
+
     </div>
 </body>
 </html>
