Change ID of sketchPad div to camelCase from kebab-case

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="sketch-pad"></div>
+    <div id="sketchPad"></div>
     <div id="settings">
 
     </div>
