--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 class="title">Etch-a-Sketch!</h1>
     <div id="sketchPad"></div>
     <div id="settings">
 
