Add elements to settings div

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <h1 class="title">Etch-a-Sketch!</h1>
     <div id="sketchPad"></div>
     <div id="settings">
-
+        <span id="size">Grid size selector [x * x]</span>
+        <span class="buttons">
+            <button id="B&W">Black & White</button>
+            <button id="Vivid">Vivid</button>
+            <button id="Opacity">Opacity</button>
+        </span>
     </div>
     <script src="script.js"></script>
 </body>
