Creat new div containing sketchPad and settings div

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1 class="title">Etch-a-Sketch!</h1>
+    <div id="contents">
     <div id="sketchPad"></div>
     <div id="settings">
         <span id="size">Grid size selector [x * x]</span>
@@ -16,6 +17,7 @@
             <button id="Vivid">Vivid</button>
             <button id="Opacity">Opacity</button>
         </span>
+    </div>
     </div>
     <script src="script.js"></script>
 </body>
