--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <div id="settings">
         <div class="sizer">
         <span id="size"><input type="range" min="1" max="100" value="50" class="slider" id="myRange"></span>
-        <div>Grid size selector [x * x]</div>
+        <div>Select Grid Size [x * x]</div>
+        <p>Value: <span id="value"></span></p>
+        <button id="set-size">Set size of grid</button>
         </div>
         <span class="buttons">
             <button id="B&W">Black & White</button>
