--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="sketchPad"></div>
     <div id="settings">
         <div class="sizer">
-        <span id="size"><input type="range" min="1" max="100" value="50" class="slider" id="myRange"></span>
+        <span><input type="range" min="1" max="100" value="50" class="slider" id="myRange"></span>
         <div>Select Grid Size [x * x]</div>
         <p>Value: <span id="value"></span></p>
         <button id="set-size">Set size of grid</button>
