Change id of setSize button to camelCase

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <span><input type="range" min="1" max="100" value="50" class="slider" id="myRange"></span>
         <div>Select Grid Size [x * x]</div>
         <p>Value: <span id="value"></span></p>
-        <button id="set-size">Set size of grid</button>
+        <button id="setSize">Set size of grid</button>
         </div>
         <span class="buttons">
             <button id="B&W">Black & White</button>
