Remove special character '&' from id in button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="setSize">Set size of grid</button>
         </div>
         <span class="buttons">
-            <button id="B&W">Black & White</button>
+            <button id="BW">Black & White</button>
             <button id="Vivid">Vivid</button>
             <button id="Opacity">Opacity</button>
         </span>
